# AlfabetizacaoIA-fork

./: .env  .env.example  .gitignore  README.md  SAVE.txt  ai-pipeline-analysis.md  app.py  main.py  msg.py  pyproject.toml  teste.py
.github/: copilot-instructions.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
data/knowledge/: marajo.txt
deploy/: gunicorn_config.py
scripts/: debug_modelos.py  ingest_knowledge.py  load_marajoara_corpus.py  testar_gemini.py  testar_integracao_ia.py  testar_rag.py
specs/001-alfabot-marajoara/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-alfabot-marajoara/checklists/: requirements.md
specs/001-alfabot-marajoara/contracts/: whatsapp-cloud-api.md
src/alfabetizacaoia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/alfabot/: __init__.py  app.py  config.py  logger_config.py  main.py
src/alfabot/domain/: enums.py  models.py
src/alfabot/infra/: chroma.py  db.py  logging.py  meta_client.py  (+2 more)
tests/: conftest.py
tests/contract/: test_meta_client.py  test_webhook.py
tests/deploy/: gunicorn.conf.py
tests/integration/: test_audio_retry_flow.py  test_message_pipeline.py  test_onboarding_flow.py  test_rag_pipeline.py
tests/unit/: test_audio_service.py  test_error_handling.py  test_message_parser.py  test_onboarding_service.py  test_rag_service.py  test_response_builder.py
(+14 files in other folders)
