[project]
name = "alfabetizacaoia"
version = "0.1.0"
description = "Alfabot Marajoara"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "ollama>=0.6.2",

    "chromadb>=1.5.9",
    "faster-whisper>=1.2.1",
    "gunicorn>=26.0.0",
    "google-genai>=2.8.0",
    "google>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
